8167175: JFX MediaPlayer Leaks Native Memory in Windows

Reviewed-by: ddehaven